--- a/.github/workflows/generated-periodic-win-vs2019-cuda11.1-py3.yml
+++ b/.github/workflows/generated-periodic-win-vs2019-cuda11.1-py3.yml
@@ -93,9 +93,13 @@ jobs:
         shell: bash
         run: |
           .circleci/scripts/windows_cudnn_install.sh
+      - uses: actions/setup-python@v2
+        name: Setup Python3
+        with:
+          python-version: '3.x'
       - name: Parse ref
         id: parse-ref
-        run: .github/scripts/parse_ref.py
+        run: python3 .github/scripts/parse_ref.py
       - name: Build
         shell: bash
         env:
@@ -265,7 +269,7 @@ jobs:
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
         id: parse-ref
-        run: .github/scripts/parse_ref.py
+        run: python3 .github/scripts/parse_ref.py
       - name: Upload test statistics
         if: always()
         env:
@@ -421,7 +425,7 @@ jobs:
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
         id: parse-ref
-        run: .github/scripts/parse_ref.py
+        run: python3 .github/scripts/parse_ref.py
       - name: Upload test statistics
         if: always()
         env:
